--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -3,14 +3,14 @@
 </h1>
 
 <div class="block-content">
-	<div ng-include="modules/artifacts/client/views/partial.artifact-view.html"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
 </div>
 
-<div  class="block-content" ng-include="modules/artifacts/client/views/partial.artifact-notes.html"></div>
+<div  class="block-content" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 
-<div  class="block-content" ng-include="modules/artifacts/client/views/partial.artifact-comments.html"></div>
+<div  class="block-content" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
 <div>
-	<a class="btn btn-default" ui-sref="p.artifact.list">Cancel</a>
+	<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
 	<a class="btn btn-success" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 </div>
