--- a/modules/artifacts/client/views/artifact-publish.html
+++ b/modules/artifacts/client/views/artifact-publish.html
@@ -1,16 +1,17 @@
 <h1 class="page-title">
-	Edit {{artifact.type.type}} for {{ project.name }}
+	Publish {{artifact.type.type}} for {{ project.name }}
 </h1>
 
 <div class="block-content">
-	<div ng-include="modules/artifacts/client/views/partial.artifact-edit.html"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
 </div>
-
-<div  class="block-content" ng-include="modules/artifacts/client/views/partial.artifact-notes.html"></div>
-
-<div  class="block-content" ng-include="modules/artifacts/client/views/partial.artifact-comments.html"></div>
 
 <div>
 	<a class="btn btn-default" ui-sref="p.artifactlist">Cancel</a>
-	<a class="btn btn-success" ui-sref="publish()">Publish</a>
+	<a class="btn btn-success" ng-click="submit()">Publish</a>
 </div>
+
+<div  class="block-content" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+
+<div  class="block-content" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
