--- a/modules/orgs/client/views/org-list.html
+++ b/modules/orgs/client/views/org-list.html
@@ -1,32 +1,27 @@
-<section id="project-view" class="row">
-<div class='col-sm-10'>
-	<h1 class="page-title">Orgs Library</h1>
-	<div class="row text-right">
-		<div class="col-sm-12">
-			<button class="btn btn-success btn-sm" x-mode="add" x-collection="data.collection" x-edit-org-modal><i class="glyphicon glyphicon-plus"></i> Add New Org</button>
-		</div>
-	</div>
-	<div calss="row">&nbsp;</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<section class="panel panel-default">
-				<table ng-table="data.tableParams" class="dtable table table-condensed table-bordered table-striped">
-					<tr ng-repeat="o in $data">
-						<td data-title="'Name'"   title:'Title'   filter="{'name':'text'}"       sortable="'name'"    ><a href x-edit-org-modal x-mode="view" x-org="o">{{o.name}}</a></td>
-						<td data-title="'Type'"   title:'Type'    filter="{'type':'text'}"       sortable="'type'"    >{{o.type}}</td>
-						<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
-						<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
-						<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
-						<td><button class="btn btn-default btn-xs" x-edit-org-modal x-mode="edit" x-org="o"><i class="glyphicon glyphicon-pencil"></i></button></td>
-					</tr>
-				</table>
-			</section>
-		</div>
-	</div>
+<h1 class="page-title no-lower-margin">Organizations</h1>
 
-</div> <!-- /col10 -->
-<div class='col-sm-2'>
-	<tmpl-system-menu x-menu-context="'project'" x-project="projDescEdit.project"></tmpl-system-menu>
+<div class="row">
+	<div class="col-sm-12 text-right">
+		<a class="btn btn-xs btn-link" ui-sref="admin.org.create()">+ Add New Organization</a>
+	</div>
 </div>
 
-</section>
+<div class="row">
+	<div class="col-sm-12">
+		<section class="panel panel-default">
+			<table ng-table="tableParams" class="table table-condensed table-striped table-hover">
+				<tr ng-repeat="o in $data" ui-sref="admin.org.detail({orgId:o._id})" class="clickable">
+					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'">{{o.name}}</td>
+					<td data-title="'DBA'"  filter="{'companyDba':'text'}"   sortable="'companyDba'">{{o.companyDba}}</td>					
+					<td data-title="'Location'" filter="{'registeredIn':'text'}"    sortable="'registeredIn'" >{{o.registeredIn}}</td>
+					<td width="1%" class="text-right">
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.org.edit({orgId:o._id})">
+							<i class="glyphicon glyphicon-pencil"></i>
+						</a>
+					</td>
+				</tr>
+			</table>
+		</section>
+	</div>
+
+</div>
