Move group import into users module, update to use Group model instead of controller

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -48,7 +48,7 @@
 						<select ng-model="f.importType" class="form-control input-sm ng-pristine ng-valid ng-touched">
 							<option value="/api/projects/import" label="Projects">Projects</option>
 							<option value="/api/users/import" label="Contacts">Contacts</option>
-							<option value="/api/groupcontacts/import" label="Group Contacts">Group Contacts</option>
+							<option value="/api/groupusers/import" label="Group Contacts">Group Contacts</option>
 						</select>
 					</td>
 
