--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1063,7 +1063,7 @@ table thead tr.ng-table-filters {
   padding:10px;
 }
 
-.template h1, li, p {
+.template h1, li, p, div {
   font-family: $font-family-sans-serif;
 }
 
@@ -1107,6 +1107,64 @@ table thead tr.ng-table-filters {
 
 .template .letter-footer {
   margin-top:100px;
+}
+
+.template .note-box-xlrg {
+  border: 1px solid #000;
+  margin: 10px 0;
+  padding: 5px;
+}
+
+.template .note-box-lrg {
+  border: 1px solid #000;
+  margin: 10px 15px;
+  padding: 5px;
+}
+
+.template .note-box-med {
+  border: 1px solid #000;
+  margin: 10px 30px;
+  padding: 5px;
+}
+
+.template .note-box-sml {
+  border: 1px solid #000;
+  margin: 10px 45px;
+  padding: 5px;
+}
+
+.template .title-box {
+  background-color: #d3d3d3;
+  border: 1px solid #000;
+  padding: 5px;
+}
+
+.template .center {
+  text-align: center;
+}
+
+.template .page-header {
+  font-weight: bold;
+  border-bottom: 2px solid #000;
+  margin-bottom: 20px;
+  padding: 3px;
+}
+
+.template .indent-sml {
+  padding-left: 10px;
+}
+
+.template .indent-med {
+  padding-left: 20px;
+}
+
+.template .indent-lrg {
+  padding-left: 30px;
+}
+
+.template tr.spaceUnder > td
+{
+  padding-bottom: 5px;
 }
 
 .glyphicon-refresh-animate {
