--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -14,7 +14,7 @@
 		<div class='col-sm-6'>
 			<div>
 				<label class="control-label">Description</label>
-				<div ng-bind-html="projTomb.project.description"></div>
+				<pre ng-bind-html="projTomb.project.description"></pre>
 			</div>
 		</div>
 
