--- a/modules/recent-activity/client/views/recent-activity-view.html
+++ b/modules/recent-activity/client/views/recent-activity-view.html
@@ -33,7 +33,7 @@
 			<div class="col-sm-3">
 				<div class="form-group">
 					<label for="dateAdded" class="control-label">Project</label>
-					<p class="form-control-static">{{ recentActivity.project }}</p>
+					<p class="form-control-static">{{ projects[recentActivity.project].name }}</p>
 				</div>
 			</div>
 			<div class="col-sm-3">
