Adding default option for MEM or EAO endpoint on import

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -45,11 +45,11 @@
 					</td>
 
 					<td ng-if="!f.$error">
-						<select ng-model="f.importType" class="form-control input-sm ng-pristine ng-valid ng-touched">
-							<option value="/api/projects/import/mem" label="MEM Projects">MEM Projects</option>
-							<option value="/api/projects/import/eao" label="EAO Projects">EAO Projects</option>
-							<option value="/api/users/import" label="Contacts">Contacts</option>
-							<option value="/api/groupusers/import" label="Group Contacts">Group Contacts</option>
+						<select ng-init="f.importType = defaultOption" ng-model="f.importType" class="form-control input-sm ng-pristine ng-valid ng-touched">
+							<option ng-if="environment === 'MEM'" value="/api/projects/import/mem" label="MEM Projects">MEM Projects</option>
+							<option ng-if="environment === 'EAO'" value="/api/projects/import/eao" label="EAO Projects">EAO Projects</option>
+							<option ng-if="environment === 'EAO'" value="/api/users/import" label="EAO Contacts">EAO Contacts</option>
+							<option ng-if="environment === 'EAO'" value="/api/groupusers/import" label="EAO Group Contacts">EAO Group Contacts</option>
 						</select>
 					</td>
 
