--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -132,9 +132,8 @@
 			<div class="panel-body">
 				<div class="small form-group">
 
-					<h3>Public Information Sessions February 16th &amp; 17th and March 15th &amp; 16th in Kamloops</h3>
-					<p>Information on the Ajax Mine Project and the EIS / Application will be available during events held in Kamloops, B.C. Interested individuals will be able to speak with, and ask questions to, provincial and federal representatives and KGHM Ajax Mining Inc.’s technical team at all events.</p>
-					<p>For details on the Information Sessions, please click <a target="_new" href="http://a100.gov.bc.ca/appsdata/epic/documents/p362/1453226320803_07FnWpyMklYtLJDsJf1Q9yGHbyJPnZW8YtLGn2tyCqC3vpvQTMyQ!-2016153214!1453222092987.pdf">here</a>.</p>
+					<h3>Notice: The site will be unavailable on Sunday, March 27th for a period between 6:00am and 9:00am</h3>
+					<hr/>
 					<h3>Submitting Your Comments: How It Works</h3>
 					<p>Comments submitted to the Environmental Assessment Office (EAO) will be published online.</p>
 					<p>EAO publishes all accepted comments within seven days of receipt. Comments are not accepted if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
