Parsing changes for document import, adding menu item.

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -50,6 +50,7 @@
 							<option ng-if="environment === 'EAO'" value="/api/projects/import/eao" label="EAO Projects">EAO Projects</option>
 							<option ng-if="environment === 'EAO'" value="/api/users/import" label="EAO Contacts">EAO Contacts</option>
 							<option ng-if="environment === 'EAO'" value="/api/groupusers/import" label="EAO Group Contacts">EAO Group Contacts</option>
+							<option ng-if="environment === 'EAO'" value="/api/documents/import" label="EAO Documents">EAO Documents</option>
 						</select>
 					</td>
 
