--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -69,12 +69,14 @@ $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-s
 .watermark-chat {
 	background-image: url('/modules/core/client/img/watermarks/eao-chat.png');
 	background-repeat: no-repeat;
-	background-position: 110% -10%;
+	background-position: 106% -7%;
+	background-size: 30%;
 }
 .watermark-news {
 	background-image: url('/modules/core/client/img/watermarks/eao-news.png');
 	background-repeat: no-repeat;
-	background-position: 110% -10%;	
+	background-position: 106% -7%;
+	background-size: 30%;
 }
 
 
@@ -589,9 +591,11 @@ h3.panel-title {
 
 .map-filter .form-inline {
 	border-top: 1px solid #ddd;
+	background-image: -moz-linear-gradient(top, #f5f5f5 0%, #e8e8e8 100%);
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
 	background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e8e8e8 100%);
 	background-image: -o-linear-gradient(top, #f5f5f5 0%, #e8e8e8 100%);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
+	background-image: -ms-linear-gradient(top, #f5f5f5 0%, #e8e8e8 100%);
 	background-image: linear-gradient(to bottom, #f5f5f5 0%, #e8e8e8 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
 	background-repeat: repeat-x;
@@ -1160,7 +1164,7 @@ table thead tr.ng-table-filters {
 }
 
 .template .custom-list {
-  margin: 16px 0px;
+  margin: 16px 0;
   padding-left: 20px;
 }
 
